syntax = "proto3";

package proto.clustermetadatapb;

option go_package = "AKFAK/proto/clustermetadatapb";

message MetadataPartitionState {
  string topicName = 1;
  int32 partitionIndex = 2;
  int32 leader = 3;                   // BrokerID of the leader partition
  repeated int32 isr = 4;             // BrokerID which in-sync with the leader
  repeated int32 replicas = 5;        // All brokerID which hold the partition
  repeated int32 offlineReplicas = 6; // BrokerID which are offline/out-of-sync
}

message MetadataTopicState {
  string topicName = 1;
  repeated MetadataPartitionState partitionStates = 2;
}

message MetadataBroker {
  int32 ID = 1;
  string host = 2;
  int32 port = 3;
}

message MetadataCluster {
  repeated MetadataBroker liveBrokers = 1;
  repeated MetadataTopicState topicStates = 2;
  repeated MetadataBroker brokers = 3;
  MetadataBroker controller = 4;
}